--- a/.github/workflows/issue_auto_improve.yml
+++ b/.github/workflows/issue_auto_improve.yml
@@ -5,7 +5,7 @@ on:
     types: [labeled, edited, closed, reopened]
 
 jobs:
-  improve-issue:
+  ai-improve-issue:
     runs-on: ubuntu-slim
     timeout-minutes: 3
     
@@ -31,7 +31,7 @@ jobs:
       - name: Improve issue content
         id: improve
         run: |
-          uv run -m github_actions_ai_improve_issue
+          uv run -m ai_improve_issue
         env:
           ISSUE_BODY: ${{ github.event.issue.body }}
           ISSUE_TITLE: ${{ github.event.issue.title }}
@@ -75,7 +75,7 @@ jobs:
       
       - name: Update Qdrant index
         run: |
-          uv run -m github_actions_ai_improve_issue --update-single-issue ${{ github.event.issue.number }}
+          uv run -m ai_improve_issue --update-single-issue ${{ github.event.issue.number }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_REPOSITORY: ${{ github.repository }}
