--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "github-actions-ai-improve-issue"
+name = "ai-improve-issue"
 version = "0.1.0"
 description = "A feature that automatically generates specific text following an appropriate template and presents it as a comment, after the user writes 1-2 lines describing their objective in a simple blank Issue."
 readme = "README.md"
@@ -13,7 +13,7 @@ dependencies = [
 ]
 
 [project.scripts]
-improve-issue = "github_actions_ai_improve_issue.main:main"
+ai-improve-issue = "ai_improve_issue.main:main"
 
 [build-system]
 requires = ["uv_build>=0.9.11,<0.10.0"]
